tests/should_fail/enum_generic_undeclared.nv
module main

// SHOULD FAIL: enum generic type not declared in name
// e.g. enum Result { Ok: $T, Err: String } without Result(T)
enum BadResult {
    Ok: $T,
    Err: String
}
